Estilização simples exercicio-08

--- a/40-Exercicios-em-Javascript/exercicio-08/index.html
+++ b/40-Exercicios-em-Javascript/exercicio-08/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercicio-08</title>
+    <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
 
@@ -21,6 +22,7 @@
     </div>
     
     <a href="https://www.mco2.com.br/artigos/formatando-e-validando-cpf-em-formularios-html.html" target="_blank" rel="noopener noreferrer"><p>Referência</p></a>
+    
     <script src="./assets/script.js"></script>
 </body>
 </html>
