fix: Adicionado limepza do campo input no exercício-08. feat: Feito exercício-09, a lógica é inverter os parâmetros de adição de pontuação.

--- a/40-Exercicios-em-Javascript/exercicio-09/index.html
+++ b/40-Exercicios-em-Javascript/exercicio-09/index.html
@@ -3,25 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercicio-08</title>
+    <title>Exercicio-09</title>
     <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
 
     <div class="container">
-        <h3>Adicionar pontos no CPF inserido</h3>
+        <h3>Remover pontos no CPF inserido</h3>
 
         <form id="cpfForm">
             <label for="cpf">CPF:</label>
-            <input type="text" maxlength="11" id="cpf" name="cpf" placeholder="Apenas números">
+            <input type="text" maxlength="14" id="cpf" name="cpf" placeholder="Apenas números">
             <input type="submit" value="Enviar" id="enviar">
         </form>
     </div>
     <div class="areaResultado">
         <p id="exibeCpf"></p>
     </div>
-    
-    <a href="https://www.mco2.com.br/artigos/formatando-e-validando-cpf-em-formularios-html.html" target="_blank" rel="noopener noreferrer"><p>Referência</p></a>
     
     <script src="./assets/script.js"></script>
 </body>
