Atualização dos exercicios invertidos e realização do exercicio 20.

--- a/40-Exercicios-em-Javascript/exercicio-18/index.html
+++ b/40-Exercicios-em-Javascript/exercicio-18/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercicio 17</title>
+    <title>Exercicio 18</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=RocknRoll+One&display=swap" rel="stylesheet">
@@ -12,14 +12,11 @@
 <body>
     <div id="main-content">
         <div class="container-input">
-            <span>1º Número</span>
-            <input type="text" id="soma1">
-            <span>2º Número</span>
-            <input type="text" id="soma2">
+            <span>Resto da divisão de 5 / 2</span>
         </div>
 
         <div class="container-resultado">
-            <span id="resultado-soma"></span>
+            <span id="resultado"></span>
         </div>
     </div>
 
