--- a/40-Exercicios-em-Javascript/exercicio-21/index.html
+++ b/40-Exercicios-em-Javascript/exercicio-21/index.html
@@ -12,14 +12,12 @@
 <body>
     <div id="main-content">
         <div class="container-input">
-            <span>1º Número</span>
-            <input type="text" id="numero1">
-            <span>2º Número</span>
-            <input type="text" id="numero2">
+            <span>Informe o preço do produto</span>
+            <input type="text" id="preco-produto">
         </div>
 
         <div class="submit">
-            <button type="submit" id="multiplicar">Multiplicar</button>
+            <button type="submit" id="calcula-desconto">Calcular Desconto</button>
         </div>
 
         <div class="container-resultado">
